--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "tailwind-scrollbar": "^3.0.0",
     "uid": "^2.0.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
