--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "firebase": "^9.18.0",
+    "firebase-tools": "^11.24.1",
     "tailwind-scrollbar": "^3.0.0",
     "uid": "^2.0.1",
     "vue": "^3.2.47",
